--- a/DailyStatus.cbp
+++ b/DailyStatus.cbp
@@ -9,11 +9,14 @@
 			<Target title="Debug">
 				<Option output="bin/Debug/DailyStatus" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
-				<Option type="1" />
+				<Option type="0" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add directory="C:/Users/Peter/Software/sqlite" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/DailyStatus" prefix_auto="1" extension_auto="1" />
@@ -30,12 +33,18 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="C:/Users/Peter/Software/sqlite" />
 		</Compiler>
+		<ResourceCompiler>
+			<Add directory="C:/Users/Peter/Software/sqlite" />
+		</ResourceCompiler>
 		<Linker>
 			<Add library="gdi32" />
 			<Add library="user32" />
 			<Add library="kernel32" />
 			<Add library="comctl32" />
+			<Add library="C:/Users/Peter/Software/sqlite/sqlite3.dll" />
+			<Add directory="C:/Users/Peter/Software/sqlite" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
